atualização css da página cadastro: seguindo padrão do layout da página sobre

--- a/public/css/contato.css
+++ b/public/css/contato.css
@@ -1,39 +1,102 @@
-*{
-  margin: 0;
-  padding: 0;
+/* PAGINA SOBRE */
+
+.sobre-conteudo-section {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.sobre-conteudo-section:nth-child(odd) {
+  background-color: var(--) !important;
+}
+.sobre-conteudo-section:nth-child(even) {
+  background-color: var(--first-color) !important;
 }
 
-.banner{
-  display: grid;
-  grid-template-columns: 450px;
-  grid-template: max-content;
+.sobre-conteudo-form {
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: var(--first-color) !important;
   justify-content: center;
-  margin-left: 50px;
 }
 
-.avisos{
-  align-items: center;
-  /* margin-left: 200px; */
-}
-
-.form{
-  margin-left: 20%;
-  flex: space-between;
-}
-
-.form-contato{
+.sobre-conteudo-form form {
+  margin-top: 10px;
   display: inline-flex;
   flex: wrap;
   flex-direction: column;
-  flex-grow: 50px;
 }
 
-.botao{
-  margin-top: 35px;
-  margin-bottom: 45px;
-  border-color: 10px rgb(241, 3, 3);
+.sobre-equipe-grid {
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
-.input{
-  box-shadow: 10 10 10 10px;
+.sobre-equipe-card a {
+  text-decoration: none;  
 }
+
+/* a:hover {
+  color: var(--first-color) !important;
+  background-color: red;
+} */
+
+.sobre-equipe-card p {
+  color: black;
+}
+
+.about-profile-pic {
+  margin-top: 0.5rem;
+  border-radius: 50%;
+  max-width: 150px;
+}
+
+.conteudo{
+  margin-top: 70px;
+}
+
+.info-wrapper{
+  padding: 0px 10% 0px 10%;
+  /* text-align: center; */
+}
+.text-info-externas {
+  margin: 1.5rem 0 1.5rem 0;
+  font-weight: 300;
+  text-align: justify;
+  font-family: 'Roboto', sans-serif;
+  font-size: calc(1.275rem + .3vw);
+}
+
+.text-info-externas-titulo {
+  margin: 1.5rem 0 1.5rem 0;
+  color: hsl(0,0%,30%);
+  font-weight: 700;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: calc(1.275rem + .3vw);
+}
+
+.text-info-externas > p {
+  color: var(--title-color);
+  text-align: center;
+}
+
+a {
+  color: var(--title-color);
+  
+}
+a:hover {
+  color: var(--first-color) !important;
+}
+
+.section-about-title{
+  color: var(--first-color);
+  text-align: center;
+}
+
+.sobre-link-equipe{
+  margin-top: 0.5rem;
+  color:whitesmoke;
+  text-decoration: none;
+}
+
