--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -57,7 +57,7 @@
               </li> 
               <% } else {%>
                 <li class="nav-item">
-                  <a class="nav-link" href="/logout">Logout</a>
+                  <a class="nav-link" href="/login/logout">Logout</a>
                 </li>
             <% } %>  
        
