add loggedUser info on NavBar

--- a/src/views/usuario.ejs
+++ b/src/views/usuario.ejs
@@ -3,8 +3,8 @@
 <main>
   <section>
     <div>
-      <Title>Informações do Usuário</Title>
-      <p>Voltar</p>
+      <p class="mt-5 text-center h2">Página de Informações do Usuário (toDo)</p>
+      <p class="mt-5 mb-5 text-center h4">Detalhes da conta...</p>
     </div>
   </section>
 </main>
