fix Rapha contact and remove duplicated map

--- a/src/views/sobre.ejs
+++ b/src/views/sobre.ejs
@@ -49,8 +49,8 @@
                 <p>Desenvolvedor FullStack</p>
               </div>              
               <div class="col-md-3 sobre-equipe-card">
-                <img src="https://github.com/rafarano.png" class="about-profile-pic img-fluid" alt="Rafael Alves" />
-                <a href="https://github.com/rafarano">
+                <img src="https://github.com/RafaelAlvesOliveira.png" class="about-profile-pic img-fluid" alt="Rafael Alves" />
+                <a href="https://github.com/RafaelAlvesOliveira">
                   <h4 class="sobre-link-equipe">Rafael Alves</h4>
                 </a>
                 <p>Desenvolvedor FullStack</p>
