--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -3,7 +3,7 @@
     <section class="banner">
       <% if (typeof errors == 'undefined') { %> 
       <div class="avisos">
-        <h1>Formulário de cadastro</h1>
+        <h1 class="mt-4">Cadastre-se</h1>
         <ul>
           <li>Nenhum campo pode estar vazio</li>
           <li>Usuário só poderá conter letras e/ou números</li>
@@ -29,23 +29,37 @@
       <% } %> 
 
 
-      <div class="form">
-        <form action="/cadastro" method="POST" class='formulario'>
-          <label>Nome</label>
-          <input type="text" placeholder="Ex.: José Silva" name="nome" class="nome validar" id="nome" value="<%= locals.old && old.nome %>">
-          <label>CPF</label>
-          <input type="text" placeholder="xxx.xxx.xxx-xx" name="cpf" class="sobrenome validar" id="cpf" value="<%= locals.old && old.cpf %>">
-          <label>Celular</label>
-          <input type="text" placeholder="(xx)xxxx-xxxx" name="tel" class="cpf validar" id="tel" value="<%= locals.old && old.tel %>">
-          <label>E-mail</label>
-          <input type="email" placeholder="jose@mail.com.br" name="email" class="email validar" id="email" value="<%= locals.old && old.email %>"> 
-          <label>Senha</label>
-          <input type="password" name="senha" class="senha validar">
-          <label>Repetir Senha</label>
-          <input type="password" name="repeteSenha" class="repetir-senha validar">
-          <button type="submit" class="botao">Enviar</button>
+      <div class="form-signin">
+        <form action="/cadastro" method="POST" class='form-floating'>
+          <div class="form-floating">
+            <input type="text" placeholder="Ex.: José da Silva" name="nome" class="nome form-control validar" id="nome" value="<%= locals.old && old.nome %>">
+            <label for="nome">Nome</label>
+          </div>
+          <div class="form-floating">
+            <input type="text" placeholder="xxx.xxx.xxx-xx" name="cpf" class="sobrenome form-control validar" id="cpf" value="<%= locals.old && old.cpf %>">
+            <label for="cpf">CPF</label>
+          </div>
+          <div class="form-floating">
+            <input type="text" placeholder="(xx)xxxx-xxxx" name="tel" class="cpf form-control validar" id="tel" value="<%= locals.old && old.tel %>">
+            <label for="tel">Celular</label>
+          </div>
+          <div class="form-floating">
+            <input type="email" placeholder="jose@mail.com.br" name="email" class="email form-control validar" id="email" value="<%= locals.old && old.email %>"> 
+            <label for="email">E-mail</label>
+          </div>
+          <div class="form-floating">
+            <input type="password" name="senha" id="password" class="senha form-control validar">
+            <label for="password">Senha</label>
+          </div>
+          <div class="form-floating">
+            <input type="password" name="repeteSenha" id="repeatpassword" class="repetir-senha form-control validar">
+            <label for="repeatpassword">Repetir Senha</label>
 
+          </div>
 
+          <div class="login-buttons">
+            <button type="submit" class="button home__button">Enviar</button>
+          </div>
 
           <!-- Visualização da mensagem de sucesso -->
           <% if (typeof sucess != 'undefined') { %> 
