add contato form CSS

--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -56,11 +56,13 @@
               <input type="hidden" name="autoresponse" value="Recebemos sua mensagem, obrigado.
               Assim que for possível responderemos." />
               <input type="hidden" name="_captcha" value="false">
-              <input type="text" name="name" placeholder="Nome" />
-              <input type="text" name="subject" placeholder="Assunto" />
-              <input type="email" name="email" placeholder="E-mail" />
-              <textarea name="message" placeholder="Mensagem"></textarea>
-              <button type="submit">Enviar</button>
+              <input type="text" class="input-contato" name="name" placeholder="Nome" />
+              <input type="text" class="input-contato" name="subject" placeholder="Assunto" />
+              <input type="email" class="input-contato" name="email" placeholder="E-mail" />
+              <textarea name="message" class="areatext-contato" placeholder="Mensagem"></textarea>
+              <div class="mt-3 login-buttons">
+                <button class="button home__button" type="submit">Enviar</button>
+              </div>
           </form>
               </div>
             </div>
