--- a/public/css/contato.css
+++ b/public/css/contato.css
@@ -100,3 +100,25 @@ a:hover {
   text-decoration: none;
 }
 
+.input-contato {
+  padding: 3px;
+  text-indent: 5px;
+  margin-top: 5px;
+  min-width: 300px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.areatext-contato {
+  padding: 3px;
+  text-indent: 5px;
+  margin-top: 5px;
+  min-height: 150px;
+  min-width: 300px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
