--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,7 +8,9 @@
                 <img  class="mb-4" src="./assets/logo/icon.png" alt="" width="100" height="60" >
             </div>
 
-          <h1 class="h3 mb-3 fw-normal">Faça seu login</h1>
+            <div class="mt-2 d-flex justify-content-center">
+              <h1 class="h3 mb-3 center fw-normal">Faça seu login</h1>
+            </div>
 
           <!-- Visualização da mensagem de erro -->
           <% if (typeof error != 'undefined') { %> 
