--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,3 +1,17 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+
+
+
+<%- include('./partials/header') %>
+
+<main>
+  <section>
+      <div class="mt-5 mb-5">
+          <h1><%= message %></h1>
+          <h2><%= error.status %></h2>
+          <pre><%= error.stack %></pre>
+
+      </div>
+  </section>
+</main>
+
+<%- include('./partials/footer') %>
