add usuario View with addProduct button

--- a/src/views/adicionarProduto.ejs
+++ b/src/views/adicionarProduto.ejs
@@ -3,7 +3,7 @@
     <section class="banner">
       <% if (typeof errors == 'undefined') { %> 
       <div class="avisos">
-        <h1 class="mt-4">Cadastro de produto (administrador)</h1>
+        <h1 class="mt-4">Cadastro de produto</h1>
         <ul>
           <li>Nenhum campo pode estar vazio</li>
           <li>Usuário só poderá conter letras e/ou números</li>
