--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -5,10 +5,7 @@
       <div class="avisos">
         <h1 class="mt-4">Cadastre-se</h1>
         <ul>
-          <li>Nenhum campo pode estar vazio</li>
-          <li>Usuário só poderá conter letras e/ou números</li>
-          <li>Usuário deverá ter entre 3 e 12 caracteres</li>
-          <li>Senha precisa ter entre 6 e 12 caracteres</li>
+          <li>Posicione o mouse sobre o campo para dúvidas</li>
         </ul>
       </div>
       <% } %>
@@ -31,27 +28,27 @@
 
       <div class="form-signin">
         <form action="/cadastro" method="POST" class='form-floating'>
-          <div class="form-floating">
+          <div data-toggle="tooltip" title="Ex.: José da Silva" class="form-floating">
             <input type="text" placeholder="Ex.: José da Silva" name="nome" class="nome form-control validar" id="nome" value="<%= locals.old && old.nome %>">
             <label for="nome">Nome</label>
           </div>
-          <div class="form-floating">
+          <div data-toggle="tooltip" title="Formato xxx.xxx.xxx-xx, apenas dígitos" class="form-floating">
             <input type="text" placeholder="xxx.xxx.xxx-xx" name="cpf" class="sobrenome form-control validar" id="cpf" value="<%= locals.old && old.cpf %>">
             <label for="cpf">CPF</label>
           </div>
-          <div class="form-floating">
+          <div data-toggle="tooltip" title="Formato (xx)xxxx-xxxx, apenas dígitos" class="form-floating">
             <input type="text" placeholder="(xx)xxxx-xxxx" name="tel" class="cpf form-control validar" id="tel" value="<%= locals.old && old.tel %>">
             <label for="tel">Celular</label>
           </div>
-          <div class="form-floating">
+          <div data-toggle="tooltip" title="Ex: jose@mail.com.br" class="form-floating">
             <input type="email" placeholder="jose@mail.com.br" name="email" class="email form-control validar" id="email" value="<%= locals.old && old.email %>"> 
             <label for="email">E-mail</label>
           </div>
-          <div class="form-floating">
+          <div data-toggle="tooltip" title="mínimo de 8 caracteres" class="form-floating">
             <input type="password" name="senha" id="password" class="senha form-control validar">
             <label for="password">Senha</label>
           </div>
-          <div class="form-floating">
+          <div data-toggle="tooltip" title="mínimo de 8 caracteres" class="form-floating">
             <input type="password" name="repeteSenha" id="repeatpassword" class="repetir-senha form-control validar">
             <label for="repeatpassword">Repetir Senha</label>
 
