--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,10 +1,10 @@
 <%- include('./partials/header') %>
   <main class="container">
     <section>
-        <h1>404</h1>
+        <h1 class="mt-5">404</h1>
         <p>The page you are looking for does not exist.</p>
         <% if (textoErro) { %>
-            <p><%= textoErro %></p>
+            <h3 class="mt-3 mb-5"><%= textoErro %></h3>
         <% } %>
         
     </section>
