--- a/src/views/produto.ejs
+++ b/src/views/produto.ejs
@@ -22,7 +22,28 @@
                         </a>
 
                         <button class="button home__button">COMPRAR</button>
+
+                        <% if (typeof user != "undefined") { %>
+                            <% if (user.kind == 'admin') { %> 
+                                    <a href="/produto/deletar/<%= produto.id %>"
+                                    class="button button--gray button--small">
+                                        DELETAR
+                                    </a>
+                            <% } %> 
+                        <% } %> 
+
+                        
                     </div>
+
+
+                    <!-- Visualização da mensagem de sucesso -->
+                    <% if (typeof sucess != 'undefined') { %> 
+                        <a href="/login">
+                        <h4 class="h5 mt-3 register-sucess-alert"><%= sucess %> </h4>
+                        </a>
+                    <% } %> 
+
+
                 </div>
             </div>
         </section>
